--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,31 @@
  *= require_tree .
  *= require_self
  */
+
+body{
+  font-family: verdana,arial,helvetica,sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+  margin: 33px;
+}
+h1{
+  display: block;
+}
+p,ol,ul,td{
+  margin: 33px;
+}
+a{
+  color: #000;
+}
+a:visited{
+  color: #666;
+}
+th{
+  padding-bottom: 5px;
+}
+td{
+  padding: 0px 5px 7px 5px;
+}
+.field, .actions{
+  margin-bottom: 10px;
+}
